--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   },
   "homepage": "https://github.com/gxiaobang/animate#readme",
   "dependencies": {
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-webpack": "^1.5.0"
+    "gulp-webpack": "^1.5.0",
+    "webpack": "^1.12.14"
   }
 }
